feat: Rename application to CommitFit
- Update main app title from 'GitHub Candidate Match MVP' to 'CommitFit'
- Update HTML title and meta description
- Update API title and welcome message
- Update README.md title
- Update frontend package.json name
- Maintain all functionality while rebranding to CommitFit

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-candidate-match-frontend",
+  "name": "commitfit-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
